# payphone-ai

./: .cruft.json  .envrc  .gitignore  README.md  flake.nix  pyproject.toml
src/payphone_ai/: _cli.py  prompts.py
src/payphone_ai/components/: __init__.py  advance_conversation.py  handle_twilio_events.py  send_ai_audio.py  synthesize_ai_audio.py  transcribe_human_audio.py
tests/: test_module.py
