[tool.poetry]
name = "payphone-ai"
version = "0.1.0"
description = ""
authors = [ "Chaz Schlarp <schlarpc@gmail.com>" ]

[tool.poetry.dependencies]
# not automatically used by poetry2nix - https://github.com/nix-community/poetry2nix/issues/570
python = "^3.9"
aiobotocore = "=2.3.4"
boto3 = "=1.21.21"
nltk = "^3.7"
numpy = "^1.23.2"
openai = "^0.23.1"
trio = "^0.21.0"
trio-asyncio = "^0.12.0"
trio-websocket = "^0.9.2"
amazon-transcribe = "^0.6.0"
trio-typing = "^0.7.0"
jmespath = "^1.0.1"
httpx = "^0.23.0"
deepgram-sdk = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
myst-parser = "^0.18.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
Sphinx = "^5.1.1"
sphinx-autoapi = "^1.8.4"
tomli = "^2.0.1"
cruft = {extras = ["pyproject"], version = "^2.10.2"}

[tool.poetry.scripts]
payphone-ai = "payphone_ai._cli:main"

[tool.nixpkgs]
dependencies = [ "rnnoise" ]
dev-dependencies = [ ]

[tool.black]
line-length = 99

[tool.coverage]
html.directory = "docs/generated/coverage"
report.show_missing = true
run.source_pkgs = [ "payphone_ai" ]
run.branch = true
xml.output = "docs/generated/coverage/coverage.xml"

[tool.cruft]
skip = [ ".git", "tests" ]

[tool.isort]
combine_as_imports = true
line_length = 99
profile = "black"
skip_gitignore = true
src_paths = [ "src", "tests" ]

[tool.mypy]
check_untyped_defs = true
files = [ "src", "tests" ]
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report xml"
testpaths = [ "tests" ]

[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"
